2004-03-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* version.h (OCTAVE_VERSION): Now 2.1.56.
	(OCTAVE_API_VERSION): Now api-v7.

2004-03-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-struct.cc (Frmfield): New function

	* oct-map.h (Octave_map::contains): Return bool, not int.

	* ov-cell.cc (Fiscellstr): No error if arg is not a cell array.
	(Fcellstr): Return arg if it is already a cell array of character
	strings.

2004-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-bool.cc (octave_bool::load_hdf5, octave_bool::save_hdf5):
	Avoid unnecessary casts.
	* ov-bool-mat.cc (octave_bool_matrix::load_hdf5,
	octave_bool_matrix::save_hdf5): Likewise.
	* ov-cell.cc (octave_cell::load_hdf5, octave_cell::save_hdf5):
	Likewise.
	* ov-complex.cc (octave_complex::load_hdf5,
	octave_complex::save_hdf5): Likewise.
	* ov-cx-mat.cc (octave_complex_matrix::load_hdf5,
	octave_complex_matrix::save_hdf5): Likewise.
	* ov-range.cc (octave_range::load_hdf5, octave_range::save_hdf5):
	Likewise.
	* ov-re-mat.cc (octave_matrix::load_hdf5, octave_matrix::save_hdf5):
	Likewise.
	* ov-scalar.cc (octave_scalar::load_hdf5, octave_scalar::save_hdf5):
	Likewise.
	* ov-str-mat.cc (octave_char_matrix_str::load_hdf5,
	octave_char_matrix_str::save_hdf5): Likewise.

2004-03-03 David Bateman <dbateman@free.fr>

	* ov-cell.cc (octave_cell::save_hdf5, octave_cell::load_hdf5):
	Make N-d aware.

2004-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* parse.y: Delete spaces surrounding = in %name-prefix directive.

2004-03-01  Petter Risholm  <risholm@idi.ntnu.no>

        * Cell.cc (Cell::cat): New function.
        * Cell.h: Provide decl.

        * oct-map.cc (Octave_map::cat): New function.
        * oct-map.h: Provide decl.

        * data.cc (Fcat): Speedup implementation.

        * data.cc (Fhorzcat, Fvertcat): New functions.

        * Array-tc.cc: Instantiate cat function.

2004-03-01  David Bateman  <dbateman@free.fr>

	* ls-hdf5.cc (save_hdf5_empty, load_hdf5_empty): New functions